REGRESSION(r277505): Crash under WTF::Detail::CallableWrapper<WebKit::WebPageProxy::setUnderPageBackgroundColorOverride(WebCore::Color&&)::$_10, void>::call https://bugs.webkit.org/show_bug.cgi?id=225979 <rdar://problem/78130098>

Reviewed by Tim Horton.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::setUnderPageBackgroundColorOverride):
Semi-speculative fix by checking the weakly-held `PageClient` before attempting to use it.
Dissasembly suggests this as the cause as the invalid access occurs early in the lambda.


Canonical link: https://commits.webkit.org/237973@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277827 268f45cc-cd09-0410-ab3c-d52691b4dbfc